# Faster-Matrix

./: CMakeLists.txt  README.md
src/: Benchmark.cpp  ScalarMatrix.cpp  ScalarMatrix.hpp
